@@ -11,6 +11,13 @@
 
 	* ipmiconsole/ipmiconsole.c (main, _stdin): Remove unnecessary and
 	excessive calls to secure_memset.
+
+	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_calculate_rmcpplus_session_keys)
+	(ipmi_rmcpplus_check_packet_session_authentication_code)
+	(ipmi_rmcpplus_check_rakp_2_key_exchange_authentication_code)
+	(ipmi_calculate_rakp_3_key_exchange_authentication_code)
+	(ipmi_rmcpplus_check_rakp_4_integrity_check_value): Fix secure
+	memset of invalid/unnecessary buffers.
 	
 2016-09-29 Albert Chu <chu11@llnl.gov>
 
